# hw_dcmi_wrapper

./: .gitignore  Cargo.toml  README.md  README_CN.md  release-plz.toml
crates/hw_dcmi/: Cargo.toml
crates/hw_dcmi/src/: device.rs  enums.rs  lib.rs  macros.rs  structs.rs
crates/hw_dcmi/src/test/: mod.rs
crates/hw_dcmi_wrapper/: CHANGELOG.md  Cargo.toml  build.rs
crates/hw_dcmi_wrapper/src/: enums.rs  error.rs  lib.rs  macros.rs  structs.rs
crates/hw_dcmi_wrapper/src/device/: card.rs  chip.rs  mod.rs  vchip.rs
crates/hw_dcmi_wrapper/src/test/: mod.rs
crates/hw_dcmi_wrapper_sys/: CHANGELOG.md  Cargo.toml  README.md  README_CN.md  build.rs
crates/hw_dcmi_wrapper_sys/src/: bindings.rs  lib.rs
