[package]
name = "hw_dcmi_wrapper_sys"
version = "0.1.3"
authors = ["ZhuLegend"]
description = "A raw FFI binding to the Huawei DCMI API."
readme = "./README.md"
documentation = "https://docs.rs/hw_dcmi_wrapper_sys"
repository = "https://github.com/ZhuLegend/hw_dcmi"
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["huawei", "gpu", "managment", "monitoring", "hardware"]
categories = ["external-ffi-bindings", "hardware-support"]

[dependencies]
libloading = { workspace = true, optional = true }

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }

[features]
load_dynamic = ["dep:libloading"]
bindgen = ["dep:bindgen"]
